[gd_scene load_steps=3 format=2]

[ext_resource path="res://EnemyPlaceholder.tscn" type="PackedScene" id=1]
[ext_resource path="res://EnemySpawner.gd" type="Script" id=2]

[node name="EnemyHandler" type="Spatial"]
script = ExtResource( 2 )

[node name="EnemyPlaceholder" parent="." instance=ExtResource( 1 )]

[node name="Respawn_Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Respawn_Timer" to="." method="_on_Respawn_Timer_timeout"]
